Refactorings and configs
- Changed name of the StateMachineStore to something more sensible
- Only do unclean recovery on partitions sans unfenced ELR and ISR
- Build errors fixed